# ChangeLog for dev-perl/XML-Elemental
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/ChangeLog,v 1.13 2008/04/29 00:15:53 yuval Exp $

*XML-Elemental-2.1 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +XML-Elemental-2.1.ebuild:
  Version bump

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -XML-Elemental-1.03.ebuild, XML-Elemental-2.0.ebuild:
  Ebuild maintenance

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  XML-Elemental-2.0.ebuild:
  Marking amd64 stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  XML-Elemental-1.03.ebuild, XML-Elemental-2.0.ebuild:
  Adding perl dep; fixed DEPEND

  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  XML-Elemental-2.0.ebuild:
  Stable on hppa

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> XML-Elemental-2.0.ebuild:
  Mark 2.0 stable on ia64

  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
  XML-Elemental-1.03.ebuild, XML-Elemental-2.0.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  XML-Elemental-2.0.ebuild:
  Keyworded ~hppa

  09 Jun 2006; Jon Hood <squinky86@gentoo.org> XML-Elemental-2.0.ebuild:
  Add ~amd64 in preparation of bug #91091.

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> XML-Elemental-2.0.ebuild:
  Mark 2.0 ~ia64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  XML-Elemental-2.0.ebuild:
  Marking sparc x86 stable

*XML-Elemental-2.0 (27 Nov 2005)

  27 Nov 2005; Michael Cummings <mcummings@gentoo.org>
  XML-Elemental-1.03.ebuild, +XML-Elemental-2.0.ebuild:
  marking 1.03 stable; version bump

*XML-Elemental-1.03 (07 Feb 2005)

  07 Feb 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +XML-Elemental-1.03.ebuild:
  dep for bug 80913
