@@ -1,6 +1,6 @@
 DIST XML-Elemental-2.0.tar.gz 7888 RMD160 a4a57afcb4213792ff68007518d3e4a6fffeb503 SHA1 53dc1f554537d61211611c482db2a1ad98541eeb SHA256 69bc7ac57989ad0ff152b6c4ddd9263551afae3bbe2250d5d4573b1c801bc414
 DIST XML-Elemental-2.1.tar.gz 9736 RMD160 6d10e035e19a8e24575e190c99d85b5fae22a362 SHA1 596034728a155171c635e8ee08b1b6de5f45e822 SHA256 37cbd4167809bf6ce6c2ee5fbd8e29ae07df7370cfbed0f71072c0e21666b818
 EBUILD XML-Elemental-2.0.ebuild 671 RMD160 c40674a009092dc2707df3aeb4fd83599d9330c0 SHA1 95b9ae63a1cff8c2a15d652d83af060f3675ad58 SHA256 a8d338e985a16f397f33a3ec8dc0d496356bc32ae281a674889f5837490202f3
-EBUILD XML-Elemental-2.1.ebuild 696 RMD160 0c7d47bb129509dd3e7a8efe5faf344cb2ad0468 SHA1 49ca2efd0621a3452df58a230984f9050c2f5c84 SHA256 4485e9b1f950a5da4e019f704d1e46c42f6971ff5de7d8162bbfc072e7941875
-MISC ChangeLog 1840 RMD160 758d7caf55885bd3937cd4091b30ec318011b373 SHA1 d0ae8dbdb2feaee5a0ee377cf0e4d90219726f4b SHA256 739ec2cc853dd97d5fee3ae7355158be904de3e610d66743bca01d4f72294485
+EBUILD XML-Elemental-2.1.ebuild 605 RMD160 35340bf5e48590b0893f9ded69fca8f0c1fca4dd SHA1 03a1789de0de64edff1ef6f569dd96a0f6c31805 SHA256 0407583047189133cd67f2a5ab242f3ebd3a153ce404148b84ea5d6a3fa8c8e2
+MISC ChangeLog 1972 RMD160 16816c4e1e74eb0754ad3229a06c7a64f9c62776 SHA1 aa28d4a4b3fe5fbf50c448b5c90a679d45b3bd76 SHA256 db83985149f21483a5e2be5c1e89f676a4df040ea3a3425209d9792e7255ffbf
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
