@@ -1,12 +1,11 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/XML-Elemental-2.1.ebuild,v 1.1 2008/04/29 00:15:53 yuval Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/XML-Elemental-2.1.ebuild,v 1.2 2009/05/30 09:31:31 tove Exp $
 
+MODULE_AUTHOR=TIMA
 inherit perl-module
 
 DESCRIPTION="an XML::Parser style and generic classes for simplistic and perlish handling of XML data. "
-HOMEPAGE="http://search.cpan.org/~tima/"
-SRC_URI="mirror://cpan/authors/id/T/TI/TIMA/${P}.tar.gz"
 
 LICENSE="Artistic"
 SLOT="0"
@@ -17,6 +16,6 @@ SRC_TEST="do"
 
 DEPEND="dev-perl/XML-Parser
 	dev-perl/XML-SAX
-		dev-perl/Class-Accessor
-		>=dev-perl/Task-Weaken-1.02
+	dev-perl/Class-Accessor
 	dev-lang/perl"
+RDEPEND="${DEPEND}"
