@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/XML-Elemental
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/ChangeLog,v 1.13 2008/04/29 00:15:53 yuval Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/ChangeLog,v 1.14 2009/05/30 09:31:31 tove Exp $
+
+  30 May 2009; Torsten Veller <tove@gentoo.org> XML-Elemental-2.1.ebuild:
+  Remove Task-Weaken dependency and add ~hppa ~ia64 again
 
 *XML-Elemental-2.1 (29 Apr 2008)
 
